--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ requires = [
     "setuptools >= 42",
 
     # Plugins
-    "setuptools_scm[toml] >= 7.0.4",
+    #"setuptools_scm[toml] >= 7.0.4",
+    "setuptools_scm[toml] == 7.0.5.dev3+g3234d72",
 ]
 build-backend = "setuptools.build_meta"
 
